--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,8 +1,10 @@
 <ion-content>
   <ion-grid>
-    <ion-row align-items-center justify-content-center>
+    <ion-row id="logo-area" align-items-center justify-content-center>
       <img src="./assets/imgs/logo.png" alt="Logo TcheOxeUai">
+    </ion-row>
 
+    <ion-row id="botoes" align-items-center justify-content-center>
       <button ion-button block icon-start color="facebook">
         <ion-icon name="logo-facebook"></ion-icon>
         Jogar
