--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,10 +7,10 @@
     <ion-row id="botoes" align-items-center justify-content-center>
       <button ion-button block icon-start color="facebook">
         <ion-icon name="logo-facebook"></ion-icon>
-        Jogar
+        Entrar
       </button>
 
-      <button ion-button block>Jogar Como Visitante</button>
+      <button ion-button block (click)="logar()">Entrar Como Visitante</button>
     </ion-row>
   </ion-grid>
 </ion-content>
