--- a/src/pages/transicao/transicao.html
+++ b/src/pages/transicao/transicao.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <h1>Você avançou yeyeyeyey</h1>
+  <h1>Parabéns!</h1>
 
   <button ion-button (click)="continuar()">Continuar</button>
 </ion-content>
