mostrar se o jogador acertou

--- a/src/pages/transicao/transicao.html
+++ b/src/pages/transicao/transicao.html
@@ -1,5 +1,6 @@
 <ion-content>
-  <h1>Parabéns!</h1>
+  
+    <h1>{{resposta}}</h1>
 
   <button ion-button (click)="continuar()">Continuar</button>
 </ion-content>
