Much code, so programming

--- a/src/pages/hub/hub.html
+++ b/src/pages/hub/hub.html
@@ -3,7 +3,7 @@
     <ion-avatar item-start>
       <img src="https://randomuser.me/api/portraits/lego/3.jpg">
     </ion-avatar>
-    <h2>João da Silva</h2>
+    <h2>{{pessoa.pessoa}}</h2>
     <p>123 pontos</p>
   </ion-item>
 
