--- a/src/pages/questao/questao.html
+++ b/src/pages/questao/questao.html
@@ -18,7 +18,7 @@
 
 <ion-content>
   <ion-card>
-    <img src="http://via.placeholder.com/350x150" />
+    <img src={{imagem}} />
     <ion-card-content>
       <ion-card-title>
         Pergunta
