--- a/src/pages/transicao/transicao.html
+++ b/src/pages/transicao/transicao.html
@@ -1,6 +1,9 @@
 <ion-content>
+    <div padding>
+
   
     <h1>{{resposta}}</h1>
 
-  <button ion-button (click)="continuar()">Continuar</button>
+    <button ion-button (click)="continuar()">Continuar</button>
+  </div>
 </ion-content>
