--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -10,7 +10,8 @@
         Entrar
       </button>
 
-      <button ion-button block (click)="entrarComoConvidado()">Entrar Como Visitante</button>
+      <!-- <button ion-button block (click)="entrarComoVisitante()">Entrar Como Visitante</button> -->
+      <!-- <button ion-button block (click)="demonstracao()">Demonstração</button> -->
     </ion-row>
   </ion-grid>
 </ion-content>
