--- a/src/pages/transicao/transicao.html
+++ b/src/pages/transicao/transicao.html
@@ -1,9 +1,14 @@
 <ion-content>
-    <div padding>
+  <div class="resultado" ion-row align-items-center justify-content-center text-center padding>
+    <ion-icon [color]="acertou ? 'secondary' : 'danger'" [name]="acertou ? 'checkmark' : 'close'"></ion-icon>
+    <h2 ion-text color="secondary">Resposta {{acertou ? 'Correta' : 'Errada'}}</h2>
 
-  
-    <h1>{{resposta}}</h1>
+    <button ion-button block (click)="proximaPergunta()">
+      Próxima Pergunta
+    </button>
 
-    <button ion-button (click)="continuar()">Continuar</button>
+    <button ion-button block (click)="mudarRegiao()">
+      Escolher Outra Região
+    </button>
   </div>
 </ion-content>
