Ajuste de grafia

--- a/src/pages/hub/hub.html
+++ b/src/pages/hub/hub.html
@@ -34,7 +34,7 @@
         </ion-card-header>
         <ion-card-content [ngPlural]="pessoa.respondidas_2.length">
           <ng-template class="card-subtitle" ngPluralCase="=0">Nenhuma pergunta respondida</ng-template>
-          <ng-template class="card-subtitle" ngPluralCase="=1">Uma pergunta respondidas</ng-template>
+          <ng-template class="card-subtitle" ngPluralCase="=1">Uma pergunta respondida</ng-template>
           <ng-template class="card-subtitle" ngPluralCase="other">{{pessoa.respondidas_2.length}} perguntas respondidas</ng-template>
         </ion-card-content>
       </ion-col>
@@ -50,7 +50,7 @@
         </ion-card-header>
         <ion-card-content [ngPlural]="pessoa.respondidas_3.length">
           <ng-template class="card-subtitle" ngPluralCase="=0">Nenhuma pergunta respondida</ng-template>
-          <ng-template class="card-subtitle" ngPluralCase="=1">Uma pergunta respondidas</ng-template>
+          <ng-template class="card-subtitle" ngPluralCase="=1">Uma pergunta respondida</ng-template>
           <ng-template class="card-subtitle" ngPluralCase="other">{{pessoa.respondidas_3.length}} perguntas respondidas</ng-template>
         </ion-card-content>
       </ion-col>
@@ -66,7 +66,7 @@
         </ion-card-header>
         <ion-card-content [ngPlural]="pessoa.respondidas_4.length">
           <ng-template class="card-subtitle" ngPluralCase="=0">Nenhuma pergunta respondida</ng-template>
-          <ng-template class="card-subtitle" ngPluralCase="=1">Uma pergunta respondidas</ng-template>
+          <ng-template class="card-subtitle" ngPluralCase="=1">Uma pergunta respondida</ng-template>
           <ng-template class="card-subtitle" ngPluralCase="other">{{pessoa.respondidas_4.length}} perguntas respondidas</ng-template>
         </ion-card-content>
       </ion-col>
@@ -82,7 +82,7 @@
         </ion-card-header>
         <ion-card-content [ngPlural]="pessoa.respondidas_5.length">
           <ng-template class="card-subtitle" ngPluralCase="=0">Nenhuma pergunta respondida</ng-template>
-          <ng-template class="card-subtitle" ngPluralCase="=1">Uma pergunta respondidas</ng-template>
+          <ng-template class="card-subtitle" ngPluralCase="=1">Uma pergunta respondida</ng-template>
           <ng-template class="card-subtitle" ngPluralCase="other">{{pessoa.respondidas_5.length}} perguntas respondidas</ng-template>
         </ion-card-content>
       </ion-col>
